--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,3 +9,6 @@ file(GLOB_RECURSE SOURCES "src/*.cpp")
 
 # Create the executable
 add_executable(out ${SOURCES})
+
+# Add the -g flag for debugging information
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
